--- a/miniprogram/pages/index/review.wxss
+++ b/miniprogram/pages/index/review.wxss
@@ -12,27 +12,29 @@ Page {
   background-color: white;
 }
 
-.category-score {
+.category-container {
   display: flex;
   justify-content: space-between;
-  font-size: 50rpx;
-  font-weight: bold;
-  margin-left: 15rpx;
-  margin-right: 15rpx;
   margin-top: 15rpx;
+}
+
+.category-score {
   background-color: white;
+  align-content: center;
+  font-size: 15pt;
+  font-weight: bold;
 }
 
 .category-name {
   display: flex;
-  flex-direction: row;  
+  flex-direction: column;  
   justify-content: space-between;
-  font-size: 30rpx;
+  font-size: 10pt;
   align-content: center;
   background-color: white;
 }
 
-.avator {
+.avatar {
   width: 80rpx;
   height: 80rpx;
   border-radius:50%;
@@ -102,4 +104,16 @@ Page {
   padding-top: 10rpx;
   padding-bottom: 20rpx;
   background-color: white;
+}
+
+.category-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image-post {
+  width: 100rpx;
+  height: 100rpx;
+  padding-left:100rpx;
 }
