--- a/miniprogram/pages/profile/profile.wxss
+++ b/miniprogram/pages/profile/profile.wxss
@@ -24,3 +24,68 @@
   margin: 20rpx;
   border-radius: 50%;
 }
+
+.review-card {
+  display: flex;
+  justify-content: flex-start;
+  padding-bottom: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  align-items: center;
+  background-color: white;
+  font-size: 8pt;
+}
+
+.card-left {
+  display: flex;
+	justify-content: space-evenly;
+  align-items: center;
+  font-size: 10px;
+  margin-right: 250rpx;
+}
+
+.card-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-size: 10px;
+  width: 100%
+}
+
+.category-score2 {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  font-size: 20rpx;
+  font-weight: bold;
+  background-color: white;
+}
+
+.category-name2 {
+  display: flex;  
+  justify-content: space-between;
+  font-size: 20rpx;
+  align-content: center;
+  background-color: white;
+}
+
+.review-card2 {
+  padding-top: 10rpx;
+  font-size: 12px;
+  background-color: white;
+}
+
+.review-comment {
+  padding-bottom: 20rpx;
+  padding-left: 100rpx;
+  padding-right: 30rpx;
+  font-size: 8pt;
+}
+
+.main-card {
+  padding-left: 20rpx;
+  padding-right: 20rpx;
+  padding-top: 10rpx;
+  padding-bottom: 20rpx;
+  background-color: white;
+}
