--- a/miniprogram/pages/index/review.wxml
+++ b/miniprogram/pages/index/review.wxml
@@ -4,19 +4,19 @@
   <image src="/images/test.jfif" style="width:100%; height:180px; border-radius:30rpx;" mode="aspectFill"></image>
   <view class="category-container" >
     <view class="category-center">
-        <text class="category-score">2/3</text>
+        <text class="category-score"> {{cleanAvg}}/3</text>
         <text class="category-name">Cleaness</text>
     </view>
     <view class="category-center">
-        <text class="category-score">2/3</text>
+        <text class="category-score"> {{paperAvg}}/3</text>
         <text class="category-name">Paper</text>
     </view>
     <view class="category-center">
-        <text class="category-score">2/3</text>
+        <text class="category-score">{{seatAvg}}/3</text>
         <text class="category-name">Seat</text>
     </view>
     <view class="category-center">
-        <text class="category-score">2/3</text>
+        <text class="category-score">{{odorAvg}}/3</text>
         <text class="category-name">Odor</text>
     </view>
   </view>
@@ -31,19 +31,19 @@
       <view class="card-right">
         <view class="category-container" >
           <view class="category-center">
-              <text class="category-score2">2/3</text>
+              <text class="category-score2">{{cleanAvg}}/3</text>
               <text class="category-name2">Cleaness</text>
           </view>
           <view class="category-center">
-              <text class="category-score2">2/3</text>
+              <text class="category-score2">{{paperAvg}}/3</text>
               <text class="category-name2">Paper</text>
           </view>
           <view class="category-center">
-              <text class="category-score2">2/3</text>
+              <text class="category-score2">{{seatAvg}}/3</text>
               <text class="category-name2">Seat</text>
           </view>
           <view class="category-center">
-              <text class="category-score2">2/3</text>
+              <text class="category-score2">{{odorAvg}}/3</text>
               <text class="category-name2">Odor</text>
           </view>
         </view>
