--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -1,42 +1,67 @@
 <!--pages/profile/profile.wxml-->
 
+<!-- After Login -->
 <view wx:if="{{currentUser}}">
     <view class="profileBanner">
       <image src="{{currentUser.avatar}}" mode="aspectFit" class="userinfo-avatar"></image>
       <text class="userPage">{{currentUser.nickname}}</text>
     </view>
+
+    <!-- User's post -->
+  <view class="main-card">
+    <view class="review-card">
+        <view class="card-left">
+          <image src="https://cloud-minapp-37964.cloud.ifanrusercontent.com/1kgMKrrFqejeLVUM.png" class="avatar" mode="aspectFit"></image>
+          <text>User Name</text>
+        </view>
+        <view class="card-right">
+          <view class="category-container" >
+            <view class="category-center">
+                <text class="category-score2">2/3</text>
+                <text class="category-name2">Cleaness</text>
+            </view>
+            <view class="category-center">
+                <text class="category-score2">2/3</text>
+                <text class="category-name2">Paper</text>
+            </view>
+            <view class="category-center">
+                <text class="category-score2">2/3</text>
+                <text class="category-name2">Seat</text>
+            </view>
+            <view class="category-center">
+                <text class="category-score2">2/3</text>
+                <text class="category-name2">Odor</text>
+            </view>
+          </view>
+        </view>
+    </view>
+    <view class="review-card2">
+      <view class="review-comment">
+        <text>Review Placeholder</text>
+      </view>
+      <image src="/images/pictureload.png" class="image-post"></image>
+    </view>
+  </view>
 </view>
+
+<!-- Before Login -->
+<!-- <view wx:else>
+  <button class="beforeLogin" type="primary" open-type="getUserInfo" bindgetuserinfo="userInfoHandler">Login</button>
+</view> -->
+
+<!-- <view wx:else>
+  <view class="profileBanner">
+    <image src="/images/toilet.png" mode="aspectFit" class="userinfo-avatar"></image>
+    <text>Click To Login</text>
+    </view>
+</view> -->
 
 <view wx:else>
-  <button type="primary" open-type="getUserInfo" bindgetuserinfo="userInfoHandler">Login</button>
+  <view class="profileBanner">
+  <button open-type="getUserInfo" bindgetuserinfo="userInfoHandler">
+    <image src="/images/toilet.png" mode="aspectFit" class="userinfo-avatar"></image>
+  </button>
+  <text>Click To Login</text>
+  </view>
 </view>
 
-<!-- User's post -->
-<view class="main-card">
-  <view class="review-card">
-      <view class="card-left">
-        <image src="https://cloud-minapp-37964.cloud.ifanrusercontent.com/1kgMKrrFqejeLVUM.png" class="avatar" mode="aspectFit"></image>
-        <text>User Name</text>
-      </view>
-      <view class="card-right">
-        <view class="category-score2">
-          <text>2/3</text>
-          <text>2/3</text>
-          <text>2/3</text>
-          <text>2/3</text>
-        </view>
-        <view class="category-name2">
-          <text>Cleaness</text>
-          <text>Paper</text>
-          <text>Seat</text>
-          <text>Odor</text>
-        </view>
-      </view>
-  </view>
-  <view class="review-card2">
-    <view class="review-comment">
-      <text>Review Placeholder</text>
-    </view>
-    <image src="/images/pictureload.png" style="width:100rpx; height: 100rpx; padding-left:100rpx"></image>
-  </view>
-</view>
