--- a/miniprogram/pages/index/review.wxml
+++ b/miniprogram/pages/index/review.wxml
@@ -1,7 +1,7 @@
 <!--miniprogram/pages/index/review.wxml-->
 
 <view class="image-container">
-  <image src="{{score.photo}}" style="width:100%; height:180px; border-radius:30rpx;" mode="aspectFill"></image>
+  <image src="{{item.photo}}" style="width:100%; height:180px; border-radius:30rpx;" mode="aspectFill"></image>
   <view class="category-container" >
     <view class="category-center">
         <text class="category-score"> {{cleanAvg}}/3</text>
