--- a/miniprogram/pages/index/review.wxss
+++ b/miniprogram/pages/index/review.wxss
@@ -104,6 +104,7 @@ Page {
   padding-top: 10rpx;
   padding-bottom: 20rpx;
   background-color: white;
+  margin-bottom: 5rpx;
 }
 
 .category-center {
