--- a/miniprogram/pages/index/review.wxss
+++ b/miniprogram/pages/index/review.wxss
@@ -35,8 +35,8 @@ Page {
 }
 
 .avatar {
-  width: 80rpx;
-  height: 80rpx;
+  width: 70rpx;
+  height: 70rpx;
   border-radius:50%;
   margin-right: 10px;
 }
@@ -57,7 +57,7 @@ Page {
 	justify-content: space-evenly;
   align-items: center;
   font-size: 10px;
-  margin-right: 250rpx;
+  padding-right: 250rpx;
 }
 
 .card-right {
@@ -89,11 +89,11 @@ Page {
   padding-top: 10rpx;
   font-size: 12px;
   background-color: white;
+  padding-left: 90rpx;
 }
 
 .review-comment {
   padding-bottom: 20rpx;
-  padding-left: 100rpx;
   padding-right: 30rpx;
   font-size: 8pt;
 }
@@ -104,6 +104,7 @@ Page {
   padding-top: 10rpx;
   padding-bottom: 20rpx;
   background-color: white;
+  margin-bottom: 10rpx;
 }
 
 .category-center {
@@ -115,5 +116,33 @@ Page {
 .image-post {
   width: 100rpx;
   height: 100rpx;
-  padding-left:100rpx;
+  padding-right: 15rpx;
+}
+
+.image-banner {
+  border-radius: 30rpx;
+  height: 100%;
+  width: 100%;
+}
+
+.address-banner {
+  font-size: 15pt;
+  font-weight: bold;
+  background-color: white;
+  text-align: center;
+  padding-top: 10px;
+}
+
+.swiper-image {
+  width: 100%;
+  height: 200px;
+  align-content: center;
+  background-color: white;
+}
+
+.limit-word {
+  width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
