got help from david on marker

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -5,5 +5,24 @@
 </view> -->
 
 <!-- <view class="map"> -->
-  <map class="map" show-location="{{true}}" latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" scale="{{16}}"></map>
-<!-- </view> -->
+  <map bindcallouttap="callout" class="map" show-location="{{true}}" latitude="{{latitude}}" longitude="{{longitude}}" markers="{{markers}}" scale="{{16}}" bindmarkertap="tapMarker" bindtap="tapMap"></map>
+
+<view class="main-card" wx:if="{{selectedToilet.id && cardOpened}}" bindtap="cardTapped" id="{{selectedToilet.id}}">
+  {{selectedToilet.address}}
+  <!-- <view class="category-center">
+      <text class="category-score2">{{item.clean}}/3</text>
+      <text class="category-name2">Cleaness</text>
+      <text class="category-score2">{{item.paper}}/3</text>
+      <text class="category-name2">Paper</text>
+  </view> -->
+  <!-- <view class="category-center">
+      <text class="category-score2">{{item.seat}}/3</text>
+      <text class="category-name2">Seat</text>
+      <text class="category-score2">{{item.odor}}/3</text>
+      <text class="category-name2">Odor</text>
+  </view> -->
+  
+
+
+</view>
+ 
