--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -17,3 +17,32 @@ page {
   height: 100vh;
   } 
 
+  .main-card {
+    width: 100%;
+    height: 20vh;
+    background-color: white;
+    position: fixed;
+    bottom: 0;
+  }
+
+  .category-score2 {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    font-size: 8pt;
+    font-weight: bold;
+    background-color: white;
+  }
+  
+  .category-name2 {
+    display: flex;  
+    justify-content: space-between;
+    font-size: 8pt;
+    align-content: center;
+    background-color: white;
+  }
+
+  .category-center {
+    display: flex;
+    flex-direction: space-bewteen;
+  }
