--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -19,30 +19,40 @@ page {
 
   .main-card {
     width: 100%;
-    height: 20vh;
+    height: 28vh;
     background-color: white;
     position: fixed;
     bottom: 0;
   }
 
+  .rating-line {
+    display:flex;
+    flex-direction: column;
+    
+  }
+
+  .rating {
+    margin-top: 20rpx;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    
+  }
+
   .category-score2 {
     display: flex;
-    justify-content: space-between;
-    align-content: center;
-    font-size: 8pt;
+    font-size: 12pt;
     font-weight: bold;
     background-color: white;
   }
-  
+
   .category-name2 {
-    display: flex;  
-    justify-content: space-between;
-    font-size: 8pt;
-    align-content: center;
+    display: flex;
+    font-size: 10pt;
     background-color: white;
   }
 
-  .category-center {
-    display: flex;
-    flex-direction: space-bewteen;
-  }
+.rating-column {
+  display:flex;
+  justify-content: space-around;
+}
