--- a/miniprogram/pages/upload/upload.wxml
+++ b/miniprogram/pages/upload/upload.wxml
@@ -61,8 +61,9 @@
 </view>
 
 <button class="image-container" plain="true" bindtap="getPhoto">
-  <image src="/images/pictureload.png" style="width:150rpx; height: 150rpx"></image>
- </button>
+  <image src="/images/pictureload.png" wx:if="{{!photo}}" style="width:150rpx; height: 150rpx"></image>
+  <image src="{{photo}}" style="width:150rpx; height: 150rpx"></image>  
+</button>
 
 <view class="submit-container">
   <button bindtap="toHome" form-type="reset"  class="btn-submit" size="regular">Submit</button>
