--- a/miniprogram/pages/upload/upload.wxml
+++ b/miniprogram/pages/upload/upload.wxml
@@ -66,6 +66,6 @@
 </button>
 
 <view class="submit-container">
-  <button bindtap="toHome" form-type="reset"  class="btn-submit" size="regular">Submit</button>
+  <button form-type="reset" class="btn-submit" size="regular">Submit</button>
 </view>
 </form>
