worked on font sizing; preview img on reviews

--- a/miniprogram/pages/index/review.wxml
+++ b/miniprogram/pages/index/review.wxml
@@ -65,6 +65,6 @@
     <view class="review-comment, limit-word">
       <text>{{item.description}}</text>
     </view>
-    <image wx:for="{{item.photo}}" wx:for-item="review_photo" src="{{review_photo}}" class="image-post" wx:if="{{index < 5}}" bindtap="previewImage"></image>
+    <image wx:for="{{item.photo}}" wx:for-item="review_photo" src="{{review_photo}}" class="image-post" wx:if="{{index < 5}}" bindtap="previewImage" data-url="{{review_photo}}"></image>
   </view>
 </view>
