--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -12,7 +12,7 @@ page {
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  font-size: 52rpx; 
+  font-size: 11pt; 
   font-weight: bold; 
   height: 100vh;
   } 
@@ -25,6 +25,9 @@ page {
     bottom: 0;
     text-align: center;
     padding-top: 20rpx;
+    border-top-left-radius: 4%;
+    border-top-right-radius: 4%;
+    
   }
 
   .rating-line {
@@ -63,4 +66,5 @@ page {
 .card-bold {
   font-weight: bold;
   font-size: 15pt;
+  padding-bottom: 10rpx;
 }
