--- a/miniprogram/pages/profile/profile.wxss
+++ b/miniprogram/pages/profile/profile.wxss
@@ -18,6 +18,8 @@ Page {
 
 .userPage {
   padding-left: 20rpx;
+  font-weight: bold;
+  font-size: 12pt
 }
 
 .userinfo-avatar {
@@ -58,7 +60,7 @@ Page {
   display: flex;
 	justify-content: space-evenly;
   align-items: center;
-  font-size: 10px;
+  font-size: 10pt;
   /* margin-right: 250rpx; */
 }
 
@@ -88,7 +90,7 @@ Page {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  font-size: 20rpx;
+  font-size: 10pt;
   font-weight: bold;
   background-color: white;
 }
@@ -96,14 +98,14 @@ Page {
 .category-name2 {
   display: flex;  
   justify-content: space-between;
-  font-size: 20rpx;
+  font-size: 9pt;
   align-content: center;
   background-color: white;
 }
 
 .review-card2 {
   padding-top: 10rpx;
-  font-size: 12px;
+  font-size: 10pt;
   background-color: white;
 }
 
@@ -111,7 +113,7 @@ Page {
   padding-bottom: 20rpx;
   padding-left: 100rpx;
   padding-right: 30rpx;
-  font-size: 8pt;
+  font-size: 10pt;
 }
 
 .category-center {
