--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,8 +1,9 @@
 /**app.wxss**/
-/* .container {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-}  */
+  height: 100%;
+} 
 
