--- a/miniprogram/pages/profile/profile.wxss
+++ b/miniprogram/pages/profile/profile.wxss
@@ -133,11 +133,20 @@ Page {
 .beforeLogin[plain]{
   padding: 0;
   border:none;
-  width:100%;
-  height: 100%
+  width:200vh;
+  height: 100vh;
 }
 
 .buttonContainer {
   font-weight: bold;
+  background-color: white;
+}
+
+.Login {
+  color:black;
+}
+
+.Loginblock {
+  opacity: 0.90;
   background-color: white;
 }
