title in profile post

--- a/miniprogram/pages/profile/profile.wxml
+++ b/miniprogram/pages/profile/profile.wxml
@@ -1,5 +1,5 @@
 <!--pages/profile/profile.wxml-->
-<view class="container" style="background-image: url('/images/toilets sign.jpg')">
+<view style="background-image: url('/images/toilets sign.jpg')">
 
 <!-- After Login -->
 
@@ -39,6 +39,9 @@
     </view>
     <view class="review-card2">
       <view class="review-comment">
+        <view class="addressTitle">
+          <text>{{item.toiletId.address}}</text>
+        </view>
         <text>{{item.description}}</text>
       </view>
       <image wx:for="{{item.photo}}" wx:for-item="review_photo" src="{{review_photo}}" class="image-post" bindtap="previewImage" data-url="{{review_photo}}"></image>
