--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -12,14 +12,14 @@ page {
   display: flex; 
   align-items: center; 
   justify-content: center; 
-  font-size: 52rpx; 
+  font-size: 35rpx; 
   font-weight: bold; 
   height: 100vh;
   } 
 
   .main-card {
     width: 100%;
-    height: 28vh;
+    height: 45vh;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -63,4 +63,14 @@ page {
 .card-bold {
   font-weight: bold;
   font-size: 15pt;
+}
+
+.btn-submit {
+  font-weight: bold;
+  font-size:16px;
+  border-radius:150px;
+  background-color: rgba(107, 167, 192, 0.644);
+}
+.btn{
+  margin-top:16px;
 }
