--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -19,7 +19,7 @@ page {
 
   .main-card {
     width: 100%;
-    height: 50vh;
+    height: 35vh;
     background-color: white;
     position: fixed;
     bottom: 0;
@@ -67,9 +67,10 @@ page {
 
 .btn-submit {
   font-weight: bold;
-  font-size:16px;
+  font-size:15px;
   border-radius:150px;
   background-color:#77BAF8 ;
+  color: white;
 }
 .btn{
   margin-top:13px;
